force-app/main/default/objects/Featured_Company__c/Featured_Company__c.object-meta.xml
<CustomObject>
    <description
    >Stores companies and clients to display in the featured companies section of the portfolio home page.</description>
    <label>Featured Company</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Featured Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>