force-app/main/default/objects/Featured_Company__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description
    >Controls the display order of companies on the portfolio home page. Lower numbers appear first.</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>