force-app/main/default/objects/Featured_Company__c/fields/Logo_Filename__c.field-meta.xml
<CustomField>
    <fullName>Logo_Filename__c</fullName>
    <description
    >Filename of the company logo in the PortfolioAssets static resource (e.g. accenture.png). Resolved at runtime as PortfolioAssets/PortfolioAssets/Company/&lt;filename&gt;.</description>
    <label>Logo Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>