force-app/main/default/objects/Featured_Company__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Featured Companies</relationshipLabel>
    <relationshipName>Featured_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>